# 21cmSense

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  CONTRIBUTORS.rst  README.rst  agents.md  codecov.yml  moderate_150.000 MHz.h5  pyproject.toml  setup.cfg  setup.py
.github/: labels.yml
.github/workflows/: compile-paper.yaml  deploy.yaml  labeler.yaml  release-draft.yml  run-docs-code.yaml  test-deploy.yaml  test-with-warnings.yaml  testsuite.yaml
21cmSense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: sense.py
ci/: testing.yaml
docs/: conf.py  environment.yml  faqs.rst  index.rst  migration_v2_to_v3.rst  requirements.txt  tutorials.rst
docs/tutorials/: SKA_forecast.ipynb  cli_tutorial.rst  getting_started.ipynb  reproducing_pober_2014.ipynb  reproducing_pober_2015.ipynb  understanding_21cmsense.ipynb  using_builtin_observatories.ipynb
docs/tutorials/data/: observatory_mwa.yml
example_configs/: observatory_hera.yml
joss-paper/: 2dps.png:Zone.Identifier  paper.bib  paper.md  uv-sampling.png:Zone.Identifier
py21cmsense/: __init__.py  _utils.py  antpos.py  baseline_filters.py  beam.py  cli.py  conversions.py  observation.py  observatory.py  sensitivity.py  theory.py  types.py  yaml.py
py21cmsense/data/antpos/: layout_ecef_SKA_central.txt  layout_ecef_SKA_core.txt  layout_enu_ska_core.txt
py21cmsense/data/farview/: P_Tb_ultimate.npy
py21cmsense/data/profiles/: HERA-H1C-IDR3.yaml  MWA-PhaseII.yaml  SKA-LOW1-core.yaml
src/py21cmsense/: __init__.py  _utils.py  antpos.py  baseline_filters.py  beam.py  cli.py  config.py  conversions.py  observation.py  observatory.py  sensitivity.py  theory.py  units.py  yaml.py
src/py21cmsense/data/: __init__.py
src/py21cmsense/data/antpos/: hera-h1c-idr3.txt  layout_ecef_SKA_central.txt  layout_ecef_SKA_core.txt  layout_enu_ska_central.txt
src/py21cmsense/data/farview/: kmag_ultimate.npy
src/py21cmsense/data/profiles/: HERA-H1C-IDR3.yaml  MWA-PhaseII.yaml  SKA-LOW1-central.yaml  SKA-LOW1-core.yaml
tests/: conftest.py  test_antpos.py  test_baseline_filters.py  test_beam.py  test_cli.py  test_conversions.py  test_io.py  test_observation.py  test_observatory.py  test_profiles.py  test_sensitivity.py  test_theory.py  test_types.py  test_utils.py  test_uvw.py  test_yaml.py
